2007-03-27  dima  <dima.exe@gmail.com>

	* rails-model-layout.el (rails-model-layout:switch-to)
	(rails-model-layout:menu): added migrations support

	* rails-migration-minor-mode.el (rails-migration-minor-mode): popup menu entry

	* rails-core.el (rails-core:model-exist-p): return nil if observer
	or mailer
	(rails-core:migration-file): allow passing a migration name
	without number (ex. "CreateUsers")
	(rails-core:current-model): added migrations support
	(rails-core:migration-file): renamed from migrate-file

	* rails-controller-layout.el (rails-controller-layout:switch-to):
	added migration support

	* inflections.el (singularize-string, pluralize-string): allow passing nil

2007-03-26  dima  <dima.exe@gmail.com>

	* rails-find.el (rails-find:gen): call ido-find-file if possible

	* rails-rake.el (rails-rake:report-result): prints results of all tests

	* rails-ruby.el: fixed compilation warnning

	* rails-rake.el, rails-scripts.el: updated, printed result of tests

	* rails-lib.el, rails.el: fix compilation error [#9547]
	
	* rails.el (rails-templates-list): added support "erb" and "liquid"

	* rails-lib.el: fixed compilation warnings

	* rails-rake.el: fixed compilation warnings

	* rails-ui.el: updated

	* rails-scripts.el: updated
	(rails-script:rake-tests-alist): removed

	* rails-ruby.el (run-ruby-in-buffer): moved from rails-scripts.el

	* rails-rake.el: created

	* rails-core.el (rails-core:migrations): added optional parameter to stip numbers

	* rails-cmd-proxy.el (rails-cmd-proxy:start-process): created

	* rails-scripts.el (rails-script:sentinel-proc): updated
	(rails-script:generation-buffer-name): removed
	(rails-script:run): updated
	(rails-script:create-project): updated

	* rails-lib.el (buffer-visible-p): created

	* rails-core.el (rails-core:file): return nil if FILE-NAME is nil

2007-03-25  dima  <dima.exe@gmail.com>

	* rails-log.el (rails-log:buffer-name): renamed from rails-log:get-buffer-name
